Bug 449230 - Touchpad applet connects to the wrong D-Bus address
Summary: Touchpad applet connects to the wrong D-Bus address
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Touchpad (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-01-27 08:39 UTC by Jin Liu
Modified: 2022-02-06 19:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2022-01-27 08:39:15 UTC
SUMMARY
In
https://invent.kde.org/plasma/plasma-desktop/-/blob/master/kcms/touchpad/applet/touchpadengine.cpp#L28
the code connects to org.kde.kded5, /modules/touchpad.  However, in QDbusViewer there is no /modules/touchpad, but /modules/kded_touchpad.  The filename of the module is kded_touchpad.so.

STEPS TO REPRODUCE
1. Enable the touchpad applet
2. Disable/enable the touchpad

OBSERVED RESULT
The touchpad tray icon doesn't change.

EXPECTED RESULT
The touchpad tray icon changes.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Nicolas Fella 2022-01-27 14:00:48 UTC
Good catch!

That could explain https://bugs.kde.org/show_bug.cgi?id=447612
Comment 2 Bug Janitor Service 2022-01-27 16:12:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/826
Comment 3 Nate Graham 2022-01-27 16:23:22 UTC
Git commit a36d64f34b2e23cf5034ceb763b9846112814f0f by Nate Graham, on behalf of Nicolas Fella.
Committed on 27/01/2022 at 16:22.
Pushed by ngraham into branch 'master'.

Fix touchpad KDED module path

The module is registered under /modules/kded_touchpad

This is derived from the plugin id

This was originally fixed with f040cdb399b10df8a50c17ac13e4fd44693d3057 but accidentally broken in e517ec09e27565951cd61d9eaac224a1f197189f

M  +1    -1    kcms/touchpad/applet/touchpadengine.cpp
M  +1    -1    kcms/touchpad/kcm/xlib/touchpadconfigxlib.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/a36d64f34b2e23cf5034ceb763b9846112814f0f
Comment 4 Nate Graham 2022-01-27 16:24:04 UTC
Git commit d46c7d7bde7fb843d68eb0b76f9da280450cabe2 by Nate Graham, on behalf of Nicolas Fella.
Committed on 27/01/2022 at 16:24.
Pushed by ngraham into branch 'Plasma/5.24'.

Fix touchpad KDED module path

The module is registered under /modules/kded_touchpad

This is derived from the plugin id

This was originally fixed with f040cdb399b10df8a50c17ac13e4fd44693d3057 but accidentally broken in e517ec09e27565951cd61d9eaac224a1f197189f


(cherry picked from commit a36d64f34b2e23cf5034ceb763b9846112814f0f)

M  +1    -1    kcms/touchpad/applet/touchpadengine.cpp
M  +1    -1    kcms/touchpad/kcm/xlib/touchpadconfigxlib.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/d46c7d7bde7fb843d68eb0b76f9da280450cabe2
Comment 5 Jin Liu 2022-01-27 17:14:21 UTC
(In reply to Nate Graham from comment #4)
> Git commit d46c7d7bde7fb843d68eb0b76f9da280450cabe2 by Nate Graham, on
> behalf of Nicolas Fella.
> Committed on 27/01/2022 at 16:24.
> Pushed by ngraham into branch 'Plasma/5.24'.
> 
> Fix touchpad KDED module path
> 
> The module is registered under /modules/kded_touchpad
> 
> This is derived from the plugin id
> 
> This was originally fixed with f040cdb399b10df8a50c17ac13e4fd44693d3057 but
> accidentally broken in e517ec09e27565951cd61d9eaac224a1f197189f
> 
> 
> (cherry picked from commit a36d64f34b2e23cf5034ceb763b9846112814f0f)
> 
> M  +1    -1    kcms/touchpad/applet/touchpadengine.cpp
> M  +1    -1    kcms/touchpad/kcm/xlib/touchpadconfigxlib.cpp
> 
> https://invent.kde.org/plasma/plasma-desktop/commit/
> d46c7d7bde7fb843d68eb0b76f9da280450cabe2

Does the "touchpad" string in line 26 need change too?
    kded.loadModule("touchpad").waitForFinished();

BTW, I guess this might also explain https://bugs.kde.org/show_bug.cgi?id=445983
Comment 6 Bug Janitor Service 2022-01-27 17:44:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/828
Comment 7 Nicolas Fella 2022-01-27 17:46:08 UTC
> Does the "touchpad" string in line 26 need change too?
>     kded.loadModule("touchpad").waitForFinished();
Yes, thanks again.
 
> BTW, I guess this might also explain
> https://bugs.kde.org/show_bug.cgi?id=445983

yes, sounds likely
Comment 8 Nicolas Fella 2022-01-27 19:52:25 UTC
Git commit d957feec50f1c5a2165db7801046735f28abc6b9 by Nicolas Fella.
Committed on 27/01/2022 at 17:44.
Pushed by ngraham into branch 'master'.

[applets/touchpad] Fix kded module name

M  +1    -1    kcms/touchpad/applet/touchpadengine.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/d957feec50f1c5a2165db7801046735f28abc6b9
Comment 9 Nate Graham 2022-01-27 19:52:48 UTC
Git commit e06a45a7b955aefa14e062a251740c0f84a1b18a by Nate Graham, on behalf of Nicolas Fella.
Committed on 27/01/2022 at 19:52.
Pushed by ngraham into branch 'Plasma/5.24'.

[applets/touchpad] Fix kded module name


(cherry picked from commit d957feec50f1c5a2165db7801046735f28abc6b9)

M  +1    -1    kcms/touchpad/applet/touchpadengine.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/e06a45a7b955aefa14e062a251740c0f84a1b18a