Fix touchpad KDED module path

The module is registered under /modules/kded_touchpad

This is derived from the plugin id

This was originally fixed with f040cdb399b10df8a50c17ac13e4fd44693d3057 but accidentally broken in e517ec09e27565951cd61d9eaac224a1f197189f

BUG: 449230