kcms/touchpad/applet/touchpadengine.cpp
@@ -25,7 +25,7 @@ void TouchpadEngine::init()
     OrgKdeKded5Interface kded(QLatin1String("org.kde.kded5"), QLatin1String("/kded"), QDBusConnection::sessionBus());
     kded.loadModule("touchpad").waitForFinished();
 
-    m_daemon = new OrgKdeTouchpadInterface("org.kde.kded5", "/modules/touchpad", QDBusConnection::sessionBus(), this);
+    m_daemon = new OrgKdeTouchpadInterface("org.kde.kded5", "/modules/kded_touchpad", QDBusConnection::sessionBus(), this);
     if (!m_daemon->isValid()) {
         return;
     }
